--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,17 @@
     <string name="suggestions">Suggestions</string>
     <string name="ok">OK</string>
     <string name="we_found_some_account_you_might_like">We found some account you might like :</string>
+    <string name="followers">Followers</string>
+    <string name="following">Following</string>
+    <string name="share_profile">SHARE PROFILE</string>
+    <string name="modify">MODIFY</string>
+    <string name="follow">Follow</string>
+    <string name="name_you_want_to_appear">Name you want to appear</string>
+    <string name="your_name">Your name</string>
+    <string name="from">From</string>
+    <string name="birthday">Birthday</string>
+    <string name="gender">Gender</string>
+    <string name="account_status">Account status</string>
+    <string name="timenote_date_format">Timenote date format</string>
+    <string name="youtube_channel">Youtube channel</string>
 </resources>
