--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,4 +65,9 @@
     <string name="title">Title</string>
     <string name="preview">Preview</string>
     <string name="share_to">Share to</string>
+    <string name="filters">Filters</string>
+    <string name="clear">Clear</string>
+    <string name="distance">Distance</string>
+    <string name="distance_km">Distance (km)</string>
+    <string name="timeline">Timeline</string>
 </resources>
