--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,5 @@
     <string name="see_more">See more</string>
     <string name="timenote_to_come">TIMENOTE TO COME</string>
     <string name="posted_recently">POSTED RECENTLY</string>
+    <string name="notifications">Notifications</string>
 </resources>
