--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -177,4 +177,8 @@
     <string name="choose_from_gallery">Choose from gallery</string>
     <string name="resize">Resize</string>
     <string name="picture_successfully_added">PICTURE SUCCESSFULLY ADDED</string>
+    <string name="man">Man</string>
+    <string name="woman">Woman</string>
+    <string name="public_label">Public</string>
+    <string name="private_label">Private</string>
 </resources>
