--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -181,4 +181,6 @@
     <string name="woman">Woman</string>
     <string name="public_label">Public</string>
     <string name="private_label">Private</string>
+    <string name="sorting">Sorting</string>
+    <string name="error_message_filling">Please fill in all the fields</string>
 </resources>
