--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -236,4 +236,6 @@
     <string name="email_already_exists">This Email already exists</string>
     <string name="usermane_already_exists">This username already exists</string>
     <string name="field_cannot_be_empty">This field can\'t be empty</string>
+    <string name="not_valid_mail_form">This is not a valid mail address</string>
+    <string name="not_username_valid_form">Username can\'t contains @</string>
 </resources>
