--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,7 +64,7 @@
     <string name="none">None</string>
     <string name="title">Title</string>
     <string name="preview">Preview</string>
-    <string name="share_to">Share to</string>
+    <string name="share_to">Share</string>
     <string name="filters">Filters</string>
     <string name="clear">Clear</string>
     <string name="distance">Distance</string>
