--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -276,4 +276,7 @@
     <string name="back_vector_path" translatable="false">M50 25,L80 50,M20 50,L80 50,M50 75,L80 50</string>
     <string name="menu_vector_path" translatable="false">M20 30,L80 30,M20 50,L80 50,M20 70,L80 70</string>
     <string name="details">Details</string>
+    <string name="add_a_label_to_appear">Add a label to appear</string>
+    <string name="label">Label</string>
+    <string name="find_out_more">Find out more</string>
 </resources>
