--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -309,4 +309,8 @@
     <string name="button_original">Original</string>
     <string name="button_sure_default">Sure</string>
     <string name="button_sure">Sure(%1$d)</string>
+    <string name="cant_start_with_password">Your password can\'t start with \"dayzee-\"</string>
+    <string name="this_is_temporary_password">This is a temporary password. Please change it in order to continue</string>
+    <string name="enter_mail">Please enter the mail link to your Dayzee account in order to receive a temporary password</string>
+    <string name="certify">Certify</string>
 </resources>
