--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -177,7 +177,7 @@
     <string name="choose_from_gallery">Multiple selections</string>
     <string name="resize">Resize</string>
     <string name="picture_successfully_added">PICTURE SUCCESSFULLY ADDED</string>
-    <string name="man">male</string>
+    <string name="man">Male</string>
     <string name="woman">Woman</string>
     <string name="public_label">Public</string>
     <string name="private_label">Private</string>
