--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
     <string name="birthday">Birthday</string>
     <string name="gender">Gender</string>
     <string name="account_status">Account status</string>
-    <string name="timenote_date_format">Timenote date format</string>
+    <string name="timenote_date_format">Dayzee date format</string>
     <string name="youtube_channel">Youtube channel</string>
     <string name="describe_yourself">Describe yourself</string>
     <string name="settings">Settings</string>
@@ -47,13 +47,13 @@
     <string name="push_notifications">Push notifications</string>
     <string name="certified_push_notifications">Certified\' push notifications</string>
     <string name="default_settings">DEFAULT SETTINGS</string>
-    <string name="timenote_visibility_format">Timenote visibility</string>
-    <string name="timenote_visibility">Timenote visibility</string>
+    <string name="timenote_visibility_format">Dayzee visibility</string>
+    <string name="timenote_visibility">Dayzee visibility</string>
     <string name="others">OTHERS</string>
     <string name="confidentiality_politic">Confidentiality politic</string>
     <string name="send_comments">Send comments</string>
     <string name="disconnect">DISCONNECT</string>
-    <string name="new_timenote">New Post</string>
+    <string name="new_timenote">New Dayzee</string>
     <string name="take_add_a_picture">ADD A PICTURE</string>
     <string name="choose_a_color">OR CHOOSE A BACKGROUND COLOR</string>
     <string name="when">When</string>
@@ -71,7 +71,7 @@
     <string name="distance_km">Distance (km)</string>
     <string name="timeline">Timeline</string>
     <string name="see_more">See more</string>
-    <string name="timenote_to_come">TIMENOTE TO COME</string>
+    <string name="timenote_to_come">DAYZEE TO COME</string>
     <string name="posted_recently">POSTED RECENTLY</string>
     <string name="notifications">Notifications</string>
     <string name="notification_manager">Notification Manager</string>
@@ -207,7 +207,7 @@
     <string name="report">Report</string>
     <string name="hide_to_others">Hide to others</string>
     <string name="add_end_date">Add End Date</string>
-    <string name="paid_timenote">Paid Timenote</string>
+    <string name="paid_timenote">Cost</string>
     <string name="no_answer">No Answer</string>
     <string name="free">Free</string>
     <string name="paid">Paid</string>
@@ -314,4 +314,133 @@
     <string name="enter_mail">Please enter the mail link to your Dayzee account in order to receive a temporary password</string>
     <string name="certify">Certify</string>
     <string name="update_temporary_password">Update temporary password</string>
+    <string name="dayzee_connection">Dayzee Connection</string>
+    <string name="password">Password</string>
+    <string name="forgotten_password">Forgotten password ?</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="login">Login</string>
+    <string name="continue_as_guest">CONITNUE AS A GUEST</string>
+    <string name="filters_all_cap">FILTERS</string>
+    <string name="people">People</string>
+    <string name="tags">Tags</string>
+    <string name="top">Top</string>
+    <string name="explore">Explore</string>
+    <string name="search">Search</string>
+    <string name="search_people_tags">Search People and Tags</string>
+    <string name="few_sec_ago">few seconds ago</string>
+    <string name="see_comment">See comment</string>
+    <string name="see_comments">See the %1$d comments</string>
+    <string name="saved_by_one">Saved by %1$s</string>
+    <string name="saved_by_tens">Saved by %1$s and tens of others</string>
+    <string name="saved_by_hundreds">Saved by %1$s and hundreds of others</string>
+    <string name="saved_by_thousands">Saved by %1$s and thousands of others</string>
+    <string name="saved_by_millions">Saved by %1$s and millions of others</string>
+    <string name="saved_by_one_and_other">Saved by %1$s and %2$d others</string>
+    <string name="everyone">Everyone</string>
+    <string name="groups">Groups</string>
+    <string name="shared">Shared</string>
+    <string name="synchro">Synchronization</string>
+    <string name="synchro_ok">The synchronization has been successfull</string>
+    <string name="no_event_to_synchronize">No event found</string>
+    <string name="error_try_again">Error, please try again</string>
+    <plurals name="time_minutes_comment">
+        <item quantity="one">%1$d minute</item>
+        <item quantity="other">%1$d minutes</item>
+    </plurals>
+    <plurals name="time_hours_comment">
+        <item quantity="one">%1$d hour</item>
+        <item quantity="other">%1$d hours</item>
+    </plurals>
+    <plurals name="time_days_comment">
+        <item quantity="one">%1$d day</item>
+        <item quantity="other">%1$d days</item>
+    </plurals>
+    <plurals name="time_months_comment">
+        <item quantity="one">%1$d month</item>
+        <item quantity="other">%1$d months</item>
+    </plurals>
+    <plurals name="time_years_comment">
+        <item quantity="one">%1$d year</item>
+        <item quantity="other">%1$d years</item>
+    </plurals>
+    <plurals name="saved_by_count">
+        <item quantity="one">Saved by %1$d person</item>
+        <item quantity="other">Saved by %1$d persons</item>
+    </plurals>
+    <plurals name="nbr_orga">
+        <item quantity="one">%1$d Organizer</item>
+        <item quantity="other">%1$d Organizers</item>
+    </plurals>
+    <plurals name="hours_plural_minutes_vary">
+        <item quantity="one">In %1$d hours and %2$d minute</item>
+        <item quantity="other">In %1$d hours and %2$d minutes</item>
+    </plurals>
+    <plurals name="hours_singular_minutes_vary">
+        <item quantity="one">In %1$d hour and %2$d minute</item>
+        <item quantity="other">In %1$d hour and %2$d minutes</item>
+    </plurals>
+    <plurals name="no_hour_minutes_vary">
+        <item quantity="one">In %1$d minute</item>
+        <item quantity="other">In %1$d minutes</item>
+    </plurals>
+    <plurals name="days_plural_hours_vary">
+        <item quantity="one">In %1$d days and %2$d hour</item>
+        <item quantity="other">In %1$d days and %2$d hours</item>
+    </plurals>
+    <plurals name="days_singular_hours_vary">
+        <item quantity="one">In %1$d day and %2$d hour</item>
+        <item quantity="other">In %1$d day and %2$d hours</item>
+    </plurals>
+    <plurals name="months_plural_days_vary">
+        <item quantity="one">In %1$d months and %2$d day</item>
+        <item quantity="other">In %1$d months and %2$d days</item>
+    </plurals>
+    <plurals name="months_singular_days_vary">
+        <item quantity="one">In %1$d month and %2$d day</item>
+        <item quantity="other">In %1$d month and %2$d days</item>
+    </plurals>
+    <plurals name="years_plural_months_vary">
+        <item quantity="one">In %1$d years and %2$d month</item>
+        <item quantity="other">In %1$d years and %2$d months</item>
+    </plurals>
+    <plurals name="years_singular_month_vary">
+        <item quantity="one">In %1$d year and %2$d month</item>
+        <item quantity="other">In %1$d year and %2$d months</item>
+    </plurals>
+    <plurals name="since_hours_plural_minutes_vary">
+        <item quantity="one">Since %1$d hours and %2$d minute</item>
+        <item quantity="other">Since %1$d hours and %2$d minutes</item>
+    </plurals>
+    <plurals name="since_hours_singular_minutes_vary">
+        <item quantity="one">Since %1$d hour and %2$d minute</item>
+        <item quantity="other">Since %1$d hour and %2$d minutes</item>
+    </plurals>
+    <plurals name="since_no_hour_minutes_vary">
+        <item quantity="one">Since %1$d minute</item>
+        <item quantity="other">Since %1$d minutes</item>
+    </plurals>
+    <plurals name="since_days_plural_hours_vary">
+        <item quantity="one">Since %1$d days and %2$d hour</item>
+        <item quantity="other">Since %1$d days and %2$d hours</item>
+    </plurals>
+    <plurals name="since_days_singular_hours_vary">
+        <item quantity="one">Since %1$d day and %2$d hour</item>
+        <item quantity="other">Since %1$d day and %2$d hours</item>
+    </plurals>
+    <plurals name="since_months_plural_days_vary">
+        <item quantity="one">Since %1$d months and %2$d day</item>
+        <item quantity="other">Since %1$d months and %2$d days</item>
+    </plurals>
+    <plurals name="since_months_singular_days_vary">
+        <item quantity="one">Since %1$d month and %2$d day</item>
+        <item quantity="other">Since %1$d month and %2$d days</item>
+    </plurals>
+    <plurals name="since_years_plural_months_vary">
+        <item quantity="one">Since %1$d years and %2$d month</item>
+        <item quantity="other">Since %1$d years and %2$d months</item>
+    </plurals>
+    <plurals name="since_years_singular_month_vary">
+        <item quantity="one">Since %1$d year and %2$d month</item>
+        <item quantity="other">Since %1$d year and %2$d months</item>
+    </plurals>
 </resources>
