--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -347,6 +347,7 @@
     <string name="error_try_again">Erreur, veuillez essayer à nouveau</string>
     <string name="api_android_key">AIzaSyDozXNaca8OBwQO5hHQ_pdGYJ9IZmJTXQs</string>
     <string name="api_web_key">AIzaSyAuNAWVp93EPzSoDxd6p5uMCFH0R-Lynr4</string>
+    <string name="error_network">Erreur Réseau</string>
     <plurals name="time_minutes_comment">
         <item quantity="one">%1$d minute</item>
         <item quantity="other">%1$d minutes</item>
