--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -18,6 +18,7 @@
     <string name="films_n_amp_series"><![CDATA[Films \n & Séries]]></string>
     <string name="shopping">Shopping</string>
     <string name="holidays">Vacances</string>
+    <string name="holiday">Vacance</string>
     <string name="calendrier_n_interessant">Calendrier \n Interessant</string>
     <string name="done">OK</string>
     <string name="how_much_do_you_like_it">Combien aimez vous ce sujet ?</string>
@@ -350,6 +351,8 @@
     <string name="api_android_key">AIzaSyDozXNaca8OBwQO5hHQ_pdGYJ9IZmJTXQs</string>
     <string name="api_web_key">AIzaSyAuNAWVp93EPzSoDxd6p5uMCFH0R-Lynr4</string>
     <string name="error_network">Erreur Réseau</string>
+    <string name="youtubers">Youtubers</string>
+    <string name="fair_trade">Fair Trade</string>
     <plurals name="time_minutes_comment">
         <item quantity="one">%1$d minute</item>
         <item quantity="other">%1$d minutes</item>
