--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="films_n_amp_series"><![CDATA[Films \n & Series]]></string>
     <string name="shopping">Shopping</string>
     <string name="holidays">Holidays</string>
+    <string name="holiday">Holiday</string>
     <string name="calendrier_n_interessant">Calendrier \n Interessant</string>
     <string name="done">Done</string>
     <string name="how_much_do_you_like_it">How Much Do You Like It?</string>
@@ -350,6 +351,8 @@
     <string name="deleted">Deleted</string>
     <string name="synchro_google">Synchronize Google Calendar</string>
     <string name="error_network">Error Network</string>
+    <string name="youtubers">Youtubers</string>
+    <string name="fair_trade">Fair Trade</string>
     <plurals name="time_minutes_comment">
         <item quantity="one">%1$d minute</item>
         <item quantity="other">%1$d minutes</item>
