--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -353,6 +353,24 @@
     <string name="error_network">Erreur Réseau</string>
     <string name="youtubers">Youtubers</string>
     <string name="fair_trade">Fair Trade</string>
+    <string name="password_changed_successfully">Password changé avec succès</string>
+    <string name="live">EN COURS</string>
+    <string name="in_time">Dans</string>
+    <string name="since_time">Depuis</string>
+    <string name="reported">Reporté. Merci.</string>
+    <string name="choose_at_least_one_category">Choisisser au moins une catégorie</string>
+    <string name="email_has_been_sent">Un email vient d\être envoyé</string>
+    <string name="invalid_authentication">Authentification Invalide</string>
+    <string name="certified">Certifié</string>
+    <string name="already_asked">Déjà Demandé</string>
+    <string name="my_posts">Mes posts</string>
+    <string name="the_joined">Participant</string>
+    <string name="with_alarm">Avec Alarme</string>
+    <string name="group_related">Lié Avec Un Groupe</string>
+    <string name="alarm_deleted">Alarme Supprimée</string>
+    <string name="alarm_created">Alarme Créée</string>
+    <string name="alarm_updated">Alarme Modifiée</string>
+    <string name="hided">Masquée</string>
     <plurals name="time_minutes_comment">
         <item quantity="one">%1$d minute</item>
         <item quantity="other">%1$d minutes</item>
