--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -353,6 +353,24 @@
     <string name="error_network">Error Network</string>
     <string name="youtubers">Youtubers</string>
     <string name="fair_trade">Fair Trade</string>
+    <string name="password_changed_successfully">Password changed successfully</string>
+    <string name="live">LIVE</string>
+    <string name="in_time">In</string>
+    <string name="since_time">Since</string>
+    <string name="reported">Reported. Thank You.</string>
+    <string name="choose_at_least_one_category">Choose at least one category</string>
+    <string name="email_has_been_sent">A mail has just been sent</string>
+    <string name="invalid_authentication">Invalid Auhtentication</string>
+    <string name="certified">Certified</string>
+    <string name="already_asked">Already Asked</string>
+    <string name="my_posts">My Posts</string>
+    <string name="the_joined">The Joined</string>
+    <string name="with_alarm">With Alarm</string>
+    <string name="group_related">Group Related</string>
+    <string name="alarm_deleted">Alarm Deleted</string>
+    <string name="alarm_created">Alarm Created</string>
+    <string name="alarm_updated">Alarm Updated</string>
+    <string name="hided">Hided</string>
     <plurals name="time_minutes_comment">
         <item quantity="one">%1$d minute</item>
         <item quantity="other">%1$d minutes</item>
