--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="shopping">Shopping</string>
     <string name="holidays">Holidays</string>
     <string name="holiday">Holiday</string>
-    <string name="calendrier_n_interessant">Calendrier \n Interessant</string>
+    <string name="calendrier_n_interessant">Interesting \n Calendars</string>
     <string name="done">Done</string>
     <string name="how_much_do_you_like_it">How Much Do You Like It?</string>
     <string name="back">Back</string>
@@ -371,6 +371,15 @@
     <string name="alarm_created">Alarm Created</string>
     <string name="alarm_updated">Alarm Updated</string>
     <string name="hided">Hided</string>
+    <string name="crypto">Crypto</string>
+    <string name="influencers">Influencers</string>
+    <string name="social_and_meeting"><![CDATA[Social & Meeting]]></string>
+    <string name="for_kids">For kids</string>
+    <string name="youtube_channels">Youtube Channels</string>
+    <string name="religion">Religion</string>
+    <string name="events_and_fair_trade"><![CDATA[Events & Fair Trade Show]]></string>
+    <string name="behind_the_screen">Behind The Screen</string>
+    <string name="culture">Culture</string>
     <plurals name="time_minutes_comment">
         <item quantity="one">%1$d minute</item>
         <item quantity="other">%1$d minutes</item>
