--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -317,6 +317,18 @@
     <string name="top">Top</string>
     <string name="explore">Explorer</string>
     <string name="search">Rechercher</string>
+    <string name="timenote_joined_body">%1$s a rejoint votre évènement %2$s</string>
+    <string name="timenote_joined_title">Un nouveau participant à votre évènement</string>
+    <string name="timenote_shared_body">%1$s vous a partagé un évènement : %2$s</string>
+    <string name="timenote_shared_title">Nouvel évènement partagé</string>
+    <string name="new_follower_body">%1$s vous suit</string>
+    <string name="new_follower_title">Nouveau follower</string>
+    <string name="accepted_follow_ask_body">Vous suivez maintenant %1$s</string>
+    <string name="accepted_follow_ask_title">Demande d\'ajout acceptée</string>
+    <string name="asked_to_follow_title">Nouvelle demande d\'ajout</string>
+    <string name="asked_to_follow_body">%1$s a demandé à vous suivre</string>
+    <string name="tagged_in_comment_title">Quelqu\'un vous a mentionné</string>
+    <string name="tagged_in_comment_body">%1$s vous a tagué sur un évènement : %2$s</string>
     <string name="search_people_tags">Rechercher People et Tags</string>
     <string name="few_sec_ago">il y\'a quelques instants</string>
     <string name="see_comment">Voir le commentaire</string>
