--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -334,6 +334,18 @@
     <string name="see_comment">See comment</string>
     <string name="see_comments">See the %1$d comments</string>
     <string name="saved_by_one">Saved by %1$s</string>
+    <string name="timenote_joined_body">%1$s joined your event %2$s</string>
+    <string name="timenote_joined_title">New event participant</string>
+    <string name="timenote_shared_body">%1$s shared an event : %2$s</string>
+    <string name="timenote_shared_title">New event shared with you</string>
+    <string name="new_follower_body">%1$s follows you</string>
+    <string name="new_follower_title">New follower</string>
+    <string name="accepted_follow_ask_body">You are now following %1$s</string>
+    <string name="accepted_follow_ask_title">Follow request accepted</string>
+    <string name="asked_to_follow_title">New follow request</string>
+    <string name="asked_to_follow_body">%1$s has requested to follow you</string>
+    <string name="tagged_in_comment_title">Tagged on an event</string>
+    <string name="tagged_in_comment_body">%1$s tagged you on an event : %2$s</string>
     <string name="saved_by_tens">Saved by %1$s and tens of others</string>
     <string name="saved_by_hundreds">Saved by %1$s and hundreds of others</string>
     <string name="saved_by_thousands">Saved by %1$s and thousands of others</string>
